--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "extra"]
 	path = extra
-	url = https://gist.github.com/hoov/3147229.git
+	url = https://gist.github.com/yukikawana/bc99db12bde1076b0baeee0b4fd80bcc.git
